--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
     <section class="section">
         <h2>Demo Video</h2>
+        <iframe src="//player.bilibili.com/player.html?aid=537987986&bvid=BV1ai4y167YN&cid=1385368654&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </section>
 
     <section class="section">
