--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             </tr>
         </table>
 
-        <p>Our RFAS Source Code Link: <a href="url">Real Time Face Attendance System</a></p>
+        <p>Our RFAS Source Code Link: <a href="https://github.com/pluemmoo/FaceRecognitionRealTimeDatabase">Real Time Face Attendance System</a></p>
     </section>
 </body>
 </html>
